# mathematics

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.cpp
src/include/: Matrix.h  Matrix4x4.h  Vector.h  Vector4.h
